versioned_docs/version-5.4.0/manage-dataset/make-pi-owner-of-dataset.md
---
sidebar_position: 4
title: Make PI owner of dataset
image: https://docs.sodaforsparc.io/thumbnails/manage-dataset/make-pi-owner-of-dataset.png
---

## Background

There are four permission privileges available for a dataset on Pennsieve: owner, manager, editor, and viewer. Each of them provides different permissions for making changes to a dataset. These permissions are summarized the table here.

When you create a dataset, you have `owner` permissions on the dataset. As per SPARC rules, the PI of the SPARC award must be made owner of the dataset. This is because only the owner can submit a dataset for publishing and SPARC requires the PI to do so.

## How to

1. Select/confirm your Pennsieve account and the dataset that you wish to rename. If you have not connected your Pennsieve account with SODA yet, [use the instructions available here](./connect-your-pennsieve-account-with-soda).
2. Select your SPARC award's PI's name in the drop-down list.
3. Click on `Make PI owner`.

:::note
You will automatically be assigned `manager` permissions to the dataset if you were the owner of the dataset.
:::

import PageFeedback from '@site/src/components/PageFeedback';

<PageFeedback />
